# cuda-mesh-voxelization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benckmarks.py  commands.sh  generate_plots.py  nsight.Dockerfile  nsight.sh  out.nvvp  plot_bar_diagram.py  plot_comparison.py  w
.cache/clangd/index/: AlignedBox.h.4CDA8FA14A36E500.idx  AngleAxis.h.8A945BEDEA605305.idx  Array.h.5E516265FED1088A.idx  ArrayBase.h.182B9D2CCBE16CD2.idx  ArrayCwiseBinaryOps.h.84DD0D53707F4F29.idx  ArrayCwiseUnaryOps.h.14AC01D331BF5A5B.idx  ArrayWrapper.h.975DD0A9A07AA35D.idx  Assign.h.6E1EAE082A3F4F6F.idx  AssignEvaluator.h.FAD49A111F0304F5.idx  AssignmentFunctors.h.1F3518068A4BDF47.idx  BDCSVD.h.014077597913D6BB.idx  BandMatrix.h.FA8C82DB06909BBA.idx  BinaryFunctors.h.895494A20C3400C9.idx  BlasUtil.h.756C969703BF5B3B.idx  Block.h.2173D5EBE7F0F962.idx  BlockHouseholder.h.86FEAE6B66291A94.idx  BlockMethods.h.A0AEFB46ECF99737.idx  BooleanRedux.h.A03ADE0248EBFC79.idx  Cholesky.C4BBF1B0269C360A.idx  ColPivHouseholderQR.h.D51D5080A1683CE5.idx  CommaInitializer.h.927470FAA350CA67.idx  CommonCwiseBinaryOps.h.5885F6C3ECE3395F.idx  CommonCwiseUnaryOps.h.B0B2035AB79CD36C.idx  (+261 more)
apps/cli/: CMakeLists.txt  main.cpp
assets/: torus.ply
examples/Convolution/: const_tiled_convolution.cpp  naive_convolution.cpp  tiled_convolution.cpp
examples/Cooperative/: Makefile  cg_reduce.cpp  cg_reduce_block  cg_reduce_warp  cg_tile_reduce  cg_tile_reduce.cpp  printRank  printRank.cpp
examples/Divergence/: divergence.cpp  no_divergence.cpp
examples/Global_Variables/: Makefile  global_variables.cpp
examples/HelloWorld/: Makefile  compile_commands.json  hello_world  hello_world.cpp
examples/ImageBLUR/: image_blur_cpu.cpp  image_blur_gpu.cpp
examples/ImageFLIP/: Makefile  image_flip_cpu.cpp  image_flip_gpu  image_flip_gpu.cpp
examples/Occupancy/: Makefile  occupancy  occupancy.cpp
examples/Pinned_Memory/: Makefile  pageable_test  pageable_test.cpp  pinned_test  pinned_test.cpp  pinned_test_2  pinned_test_2.cpp
examples/Profiling_Streams/: Makefile  profiling_code_v1.cpp  profiling_code_v2.cpp  report_v1.nsys.nsys-rep  report_v2.nsys.nsys-rep  report_v3.nsys.nsys-rep
examples/Recursive_HelloWorld/: Makefile  recursive.cu  recursive_helloworld.cpp
examples/Reduction/: blocked_reduction.cpp  coarse_reduction.cpp  naive_reduction.cpp  smem_reduction.cpp  strided_reduction.cpp
examples/SpMV/: Makefile  coo_spmv.cpp  csr_spmv.cpp  ell_spmv.cpp  plot_spmv.R  utility_sparse.hpp
examples/Stencils/: coarsed_r_tiled_stencils.cpp  coarsed_tiled_stencils.cpp  naive_stencils.cpp  tiled_stencils.cpp
examples/Streamed_VectorSUM/: Makefile  plot_vectorSUM_streamed.R  vectorSUM_naive.cpp  vectorSUM_streamed.cpp
examples/Transpose/: Makefile  naive_transpose.cpp  smem_transpose.cpp
examples/VectorSUM/: Makefile  vector_sum_cpu.cpp  vector_sum_gpu  vector_sum_gpu.cpp
reports/: crash.dmp  crash.txt  report1.nsys-rep
scripts/: benchmarks.py  generate_plots.py  plot_bar_diagram.py  plot_comparison.py
src/: bounding_box.h  csg.cuh  cuda_utils.cuh  debug_utils.h  jfa.cuh  main.cpp  mesh_io.h  profiling.h  vertex.h  voxelization.h  voxels_grid.h  voxels_to_mesh.h
src/mesh/: grid_to_mesh.cpp  mesh.h  mesh_io.cpp  mesh_io.h  voxels_to_mesh.cpp  voxels_to_mesh.h
src/voxelization/: naive.cu  sequential.cpp  tiled.cu  voxelization.cuh  voxelization.h
vplib/: CMakeLists.txt
vplib/src/: bounding_box.h  csg.cuh  cuda_ptr.h  debug_utils.h  grid.h  jfa.cuh  proc_utils.h  profiling.h  voxels_grid.h
vplib/src/csg/: csg.h  naive.cu  openmp.cpp  sequential.cpp
vplib/src/grid/: grid.h  voxels_grid.cu  voxels_grid.h
vplib/src/jfa/: jfa.h  naive.cu  openmp.cpp  sequential.cpp  tiled.cu
vplib/src/mesh/: grid_to_mesh.cpp  grid_to_mesh.h  mesh_io.cpp  mesh_io.h
vplib/src/vox/: naive.cu  openmp.cpp  sequential.cpp  tiled.cu  vox.h
vplib/src/voxelization/: naive.cu  sequential.cpp  tiled.cu  voxelization.cuh
(+193 files in other folders)
